# derix

./: .gitignore  CLAUDE.md  README.md  derivix.cabal  derix.cabal  flake.nix  typelevel-pm.cabal
artifacts/: devlog.md  plan_initial_research.md
artifacts/logs/: prototype_run_01.txt
doc/: calculus.md  callpackage.md  design-space.md  encoding.md  overlay.md
src/: Main.hs
src/Resolve/: Coherence.hs  Fix.hs  Overlay.hs  Pretty.hs  Resolve.hs  Syntax.hs
